--- a/index.html
+++ b/index.html
@@ -509,21 +509,24 @@
                         <div class="mt-10">
                             <h4 class="font-semibold mb-4">Síguenos</h4>
                             <div class="flex space-x-4">
-                                <a href="#" class="bg-white bg-opacity-20 w-10 h-10 rounded-full flex items-center justify-center hover:bg-opacity-30 transition-all">
-                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-                                    </svg>
-                                </a>
-                                <a href="#" class="bg-white bg-opacity-20 w-10 h-10 rounded-full flex items-center justify-center hover:bg-opacity-30 transition-all">
-                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                                        <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723 10.054 10.054 0 01-3.127 1.184 4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
-                                    </svg>
-                                </a>
-                                <a href="#" class="bg-white bg-opacity-20 w-10 h-10 rounded-full flex items-center justify-center hover:bg-opacity-30 transition-all">
-                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
-                                    </svg>
-                                </a>
+                                <a href="https://www.tiktok.com/@portoinvitaciones?is_from_webapp=1&sender_device=pc" class="text-gray-400 hover:text-white transition-colors">
+    <!-- TikTok -->
+    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12.88 2c.22 1.71 1.56 3.11 3.26 3.39v2.18c-.96.09-1.89-.12-2.72-.57v6.7a5.83 5.83 0 11-5.83-5.83c.41 0 .82.05 1.2.14v2.29a3.54 3.54 0 100 7.08 3.54 3.54 0 003.54-3.54V2h1.55z"/>
+    </svg>
+</a>
+<a href="#" class="text-gray-400 hover:text-white transition-colors">
+    <!-- WhatsApp -->
+    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M20.52 3.48A11.76 11.76 0 0012 0 11.76 11.76 0 002.19 17.8L0 24l6.36-2.11A11.76 11.76 0 0012 24a11.76 11.76 0 008.52-20.52zM12 21.54a9.54 9.54 0 01-5.13-1.5l-.37-.23-3.77 1.25 1.25-3.68-.24-.38a9.55 9.55 0 1117.4-5.96A9.5 9.5 0 0121.54 12 9.54 9.54 0 0112 21.54zm5.46-7.17c-.3-.15-1.75-.86-2.02-.95-.27-.1-.46-.15-.65.15-.19.3-.75.95-.92 1.14-.17.19-.34.22-.63.07a7.83 7.83 0 01-3.66-3.19c-.27-.46.27-.43.77-1.42.08-.17.04-.3-.02-.45-.07-.15-.65-1.56-.89-2.14-.23-.56-.47-.47-.65-.48h-.56c-.19 0-.46.07-.7.34-.24.26-.92.9-.92 2.2 0 1.3.94 2.56 1.07 2.73.13.17 1.86 3.04 4.5 4.26 2.64 1.22 2.64.82 3.12.77.48-.04 1.56-.64 1.78-1.26.22-.63.22-1.16.15-1.26-.07-.11-.26-.19-.56-.34z"/>
+    </svg>
+</a>
+<a href="https://www.instagram.com/portoinvitaciones.ec/" class="text-gray-400 hover:text-white transition-colors">
+    <!-- Instagram -->
+    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
+    </svg>
+</a>
                             </div>
                         </div>
                     </div>
@@ -581,21 +584,24 @@
             <div class="border-t border-gray-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
                 <p class="text-gray-400">© 2025 PortoInviitaciones. Todos los derechos reservados.</p>
                 <div class="flex space-x-6 mt-4 md:mt-0">
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors">
-                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-                        </svg>
-                    </a>
-                    <a href="#" class="text-gray-400 hover:text-white transition-colors">
-                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723 10.054 10.054 0 01-3.127 1.184 4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
-                        </svg>
-                    </a>
-                    <a href="https://www.instagram.com/portoinvitaciones.ec/" class="text-gray-400 hover:text-white transition-colors">
-                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
-                        </svg>
-                    </a>
+                    <a href="https://www.tiktok.com/@portoinvitaciones?is_from_webapp=1&sender_device=pc" class="text-gray-400 hover:text-white transition-colors">
+    <!-- TikTok -->
+    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12.88 2c.22 1.71 1.56 3.11 3.26 3.39v2.18c-.96.09-1.89-.12-2.72-.57v6.7a5.83 5.83 0 11-5.83-5.83c.41 0 .82.05 1.2.14v2.29a3.54 3.54 0 100 7.08 3.54 3.54 0 003.54-3.54V2h1.55z"/>
+    </svg>
+</a>
+<a href="#" class="text-gray-400 hover:text-white transition-colors">
+    <!-- WhatsApp -->
+    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M20.52 3.48A11.76 11.76 0 0012 0 11.76 11.76 0 002.19 17.8L0 24l6.36-2.11A11.76 11.76 0 0012 24a11.76 11.76 0 008.52-20.52zM12 21.54a9.54 9.54 0 01-5.13-1.5l-.37-.23-3.77 1.25 1.25-3.68-.24-.38a9.55 9.55 0 1117.4-5.96A9.5 9.5 0 0121.54 12 9.54 9.54 0 0112 21.54zm5.46-7.17c-.3-.15-1.75-.86-2.02-.95-.27-.1-.46-.15-.65.15-.19.3-.75.95-.92 1.14-.17.19-.34.22-.63.07a7.83 7.83 0 01-3.66-3.19c-.27-.46.27-.43.77-1.42.08-.17.04-.3-.02-.45-.07-.15-.65-1.56-.89-2.14-.23-.56-.47-.47-.65-.48h-.56c-.19 0-.46.07-.7.34-.24.26-.92.9-.92 2.2 0 1.3.94 2.56 1.07 2.73.13.17 1.86 3.04 4.5 4.26 2.64 1.22 2.64.82 3.12.77.48-.04 1.56-.64 1.78-1.26.22-.63.22-1.16.15-1.26-.07-.11-.26-.19-.56-.34z"/>
+    </svg>
+</a>
+<a href="https://www.instagram.com/portoinvitaciones.ec/" class="text-gray-400 hover:text-white transition-colors">
+    <!-- Instagram -->
+    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
+    </svg>
+</a>
                 </div>
             </div>
         </div>
