--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
         <div class="container mx-auto px-6 relative z-10">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0">
-                    <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 animate__animated animate__fadeInUp">CATÁLOGO PORTOINVIITACIONES
-                    <p class="text-lg md:text-xl mb-8 animate__animated animate__fadeInUp animate__delay-1s">Crea momentos inolvidables con nuestras invitaciones interactivas y personalizadas para cualquier ocasión.</p>
+                    <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 animate__animated animate__fadeInUp">FESTEJA A LO GRANDE DESDE LA INVITACIÓN!
+                    <p class="text-lg md:text-xl mb-8 animate__animated animate__fadeInUp animate__delay-1s">Crea momentos inolvidables con nuestras invitaciones interactivas, seguras y personalizadas para cualquier ocasión.</p>
                     <div class="flex flex-wrap gap-4 animate__animated animate__fadeInUp animate__delay-2s">
                        
                     </div>
@@ -362,7 +362,6 @@
             <p class="text-xl mb-10 max-w-2xl mx-auto">Somos únicos creadores de Codigos QR y Códigos de Acceso para tus invitaciones. ¡Comienza ahora!</p>
             <div class="flex flex-wrap justify-center gap-4">
                 <a href="#contacto" class="bg-white text-indigo-600 px-8 py-3 rounded-full font-medium hover:bg-opacity-90 transition-all">Contactar Ahora</a>
-                <a href="#catalogo" class="border-2 border-white text-white px-8 py-3 rounded-full font-medium hover:bg-white hover:bg-opacity-10 transition-all">Ver Ejemplos</a>
             </div>
         </div>
     </section>
